# predictions_backend

./: .gitignore  Cargo.toml  Dockerfile  README.md  Rocket.toml  dummy.sql  init.sql
migrations/2019-10-16-074102_create_users_table/: up.sql
migrations/2019-10-18-081811_create_predictions/: down.sql  up.sql
migrations/2019-10-29-085149_create_votes/: down.sql  up.sql
src/: lib.rs  main.rs  schema.rs  user.rs
src/db/: mod.rs  predictions.rs  statistics.rs  users.rs  votes.rs
src/models/: mod.rs  prediction.rs  statements.rs  statistics.rs  user.rs  user_config.rs  vote.rs
src/routes/: mod.rs  predictions.rs  statistics.rs  users.rs  votes.rs
tests/: tests.rs
